Quick fixes for jumping navbar in desktop view

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ html {
 #root{
     background-color: var(--primary-green);
     min-height: 100vh;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 h1,
@@ -75,12 +75,13 @@ header {
 }
 
 .container {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     padding: 15px;
 }
 
 .container-outer {
     position: relative;
+    overflow: hidden;
     background-image: -webkit-linear-gradient(330deg, #fdfbfb 0%, #ebedee 100%);
     background-image: -o-linear-gradient(330deg, #fdfbfb 0%, #ebedee 100%);
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
@@ -581,16 +582,21 @@ input[type='submit'] {
     Desktop View
 */
 
-@media only screen and (min-width: 380px){
+@media only screen and (min-width: 450px){
     .container-outer{
         width: 330px;
-        max-height: 600px;
         margin: 0 auto;
         top: 50px;
-        overflow: scroll;
+        /* overflow: scroll; */
+        /* max-height: 600px; */
         -webkit-box-shadow: 1px 12px 44px -2px rgba(89,125,81,0.61);
         -moz-box-shadow: 1px 12px 44px -2px rgba(89,125,81,0.61);
         box-shadow: 1px 12px 44px -2px rgba(89,125,81,0.61);
+    }
+
+    .container{
+      max-height: 500px;
+      overflow: scroll;
     }
 
     .block{
@@ -606,7 +612,7 @@ input[type='submit'] {
     }
 
     nav{
-        bottom: 60px;
+        position: inherit;
         width: 330px;
         margin: 0 auto;
         text-align: center;
